Fix for chrome windows: 49% is a pixel too wide

--- a/aegon-sass-library/layout/_grids.scss
+++ b/aegon-sass-library/layout/_grids.scss
@@ -206,7 +206,7 @@
     flex-basis: 57.5%;
   }
   .span6 {
-    flex-basis: 49%;
+    flex-basis: 48.9%;
   }
   .span5 {
     flex-basis: 40.5%;
